<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Bookie</string>
    <string name="action_settings">Settings</string>
    <string name="username">BUBrain (PODS) Username</string>
    <string name="password">PODS Password</string>
    <string name="go">GO!</string>
    <string name="app_username">Bookie Username</string>
    <string name="app_password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_account_nounderline">Create a Bookie Account</string>
    <string name="title_activity_class_schedule">ClassScheduleActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="login">Log In</string>
    <string name="create_account"><u>Create a Bookie Account</u></string>
    <string name="title_activity_create_bookie_account">CreateBookieAccount</string>
    <string name="logout">Log Out</string>
    <string name="ok">OK</string>
    <string name="settings">Settings</string>
    <string name="pref_sync_device">Sync Device</string>
    <string name="pref_sync_device_summ">Sync subscribed organizations\' events to a calendar on this device</string>
    <string name="pref_notifications_wanted">Notifications</string>
    <string name="pref_notifications_wanted_summ">Check if you want a device notification when an event is added to your calendar</string>
    <string name="pref_reminder_wanted">Use Reminders</string>
    <string name="pref_reminder_wanted_summ">Check if you want a Reminder added to your calendar</string>
    <string name="pref_minutes">Default Reminder Time in Minutes</string>
    <string name="pref_minutes_default">15</string>
    <string name="pref_calendar">Device Calendar</string>
    <string name="title_activity_has_menu">HasMenuActivity</string>
    <string name="title_activity_organization_activity">OrganizationActivityA</string>
    <string name="title_activity_main_page">MainPageActivity</string>
    <string name="my_orgs">My Organizations</string>
    <string name="browse_orgs">Browse Organizations</string>
    <string name="my_events">My Events</string>
    <string name="events">Events</string>
    <string name="import_sched">Import My Schedule</string>
    <string name="title_activity_organization_activity_b">OrganizationActivityB</string>
    <string name="days"><b>Days</b></string>
    <string name="location"><b>Location</b></string>
    <string name="startdate"><b>Start Date</b></string>
    <string name="enddate"><b>End Date</b></string>
    <string name="event_time"><b>Time</b></string>
    <string name="title_activity_event_activity_b">EventActivityB</string>
    <string name="subscribe">Subscribe</string>
    <string name="addToCal">Add to Calendar</string>
    <string name="title_activity_event_activity">EventActivityA</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="bmail">Bmail Username</string>

</resources>