<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainPageActivity" >

    <Button
        android:id="@+id/my_orgs_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/my_orgs" />

    <Button
        android:id="@+id/browse_orgs_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/browse_orgs" />

    <Button
        android:id="@+id/my_events_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/my_events" />

    <Button
        android:id="@+id/import_schedule_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/import_sched" />

</LinearLayout>
