<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <EditText
        android:id="@+id/app_username_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/app_username"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/app_password_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/app_password"
        android:ems="10"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/app_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login" />

    <TextView
        android:id="@+id/create_account_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_account"
        android:clickable="true"
        android:textColor="@color/textview_color" />

</LinearLayout>
